--- a/contact.html
+++ b/contact.html
@@ -5,6 +5,14 @@
   <title>Matt Douglas - Contact</title>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
   <link rel="stylesheet" href="assets/css/style.css">
+  <script>
+        function sendmail(form) {
+          var url = window.location.href;
+          url = url.slice(0, url.lastIndexOf('/')) + '/index.html';
+          form.redirect.value = url;
+          form.submit();
+        };
+  </script>
 </head>
   <body>
     <nav class="navbar navbar-default">
