--- a/contact.html
+++ b/contact.html
@@ -1,24 +1,24 @@
 <!DOCTYPE html>
 <html lang="en-us">
-<head>
-  <meta charset="UTF-8">
-  <title>Matt Douglas - Contact</title>
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
-  <link rel="stylesheet" href="assets/css/style.css">
-  <script>
-        function sendmail(form) {
-          var url = window.location.href;
-          url = url.slice(0, url.lastIndexOf('/')) + '/index.html';
-          form.redirect.value = url;
-          form.submit();
-        };
-  </script>
-</head>
+  <head>
+    <meta charset="UTF-8">
+    <title>Matt Douglas - Contact</title>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
+    <link rel="stylesheet" href="assets/css/style.css">
+    <script>
+          function sendmail(form) {
+            var url = window.location.href;
+            url = url.slice(0, url.lastIndexOf('/')) + '/index.html';
+            form.redirect.value = url;
+            form.submit();
+          };
+    </script>
+  </head>
   <body>
     <nav class="navbar navbar-default">
       <div class="container">
         <div class="navbar-header">
-          <header class="navbar-brand">Matt Douglas</h1>
+          <header class="navbar-brand">Matt Douglas</header>
         </div>
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse">
           <ul class="nav navbar-nav navbar-right">
