--- a/index.html
+++ b/index.html
@@ -1,16 +1,16 @@
 <!DOCTYPE html>
 <html lang="en-us">
-<head>
-  <meta charset="UTF-8">
-  <title>Matt Douglas - About</title>
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
-  <link rel="stylesheet" href="assets/css/style.css">
-</head>
+  <head>
+    <meta charset="UTF-8">
+    <title>Matt Douglas - About</title>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
+    <link rel="stylesheet" href="assets/css/style.css">
+  </head>
   <body>
     <nav class="navbar navbar-default">
       <div class="container">
         <div class="navbar-header">
-          <header class="navbar-brand">Matt Douglas</h1>
+          <header class="navbar-brand">Matt Douglas</header>
         </div>
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse">
           <ul class="nav navbar-nav navbar-right">
